objects/noduplicates__Test_Obj2__c.object
<CustomObject>
    <fields>
        <fullName>noduplicates__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>noduplicates__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Test_Obj1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Obj1</label>
        <referenceTo>noduplicates__Test_Obj1__c</referenceTo>
        <relationshipLabel>Test Obj2</relationshipLabel>
        <relationshipName>Test_Obj2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Obj2</label>
    <listViews>
        <fullName>noduplicates__All</fullName>
        <columns>NAME</columns>
        <columns>noduplicates__First_Name__c</columns>
        <columns>noduplicates__Last_Name__c</columns>
        <columns>noduplicates__Company__c</columns>
        <columns>noduplicates__Phone__c</columns>
        <columns>noduplicates__Street__c</columns>
        <columns>noduplicates__Test_Obj1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T2-{000000}</displayFormat>
        <label>Test Obj2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Obj2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>